--- a/style.css
+++ b/style.css
@@ -9,10 +9,12 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    width: 100%;
+    max-width: 1400px;
     padding: 0;
-    margin: 0;
+    margin: auto;
     font-family: Raleway-Regular, sans-serif;
 }
 
@@ -27,6 +29,9 @@ a {
 
 .stars i {
     color: #0065FC;
+    width: 12px;
+    margin-right: 5px;
+    padding-bottom: 15px;
 }
 
 header {
@@ -38,6 +43,7 @@ header {
 
 header img {
     margin-left: 2%;
+    height: 19px;
 }
 
 header nav {
@@ -72,14 +78,13 @@ header nav p a:hover {
 
 .entitled h1 {
     margin: 0;
-    font-size: 20px;
+    font-size: 22px;
     font-family: Raleway-Bold, sans-serif;
 }
 
 .entitled h2 {
     margin: 8px 0 0;
     font-size: 16px;
-    color: dimgray;
 }
 
 .search {
@@ -101,7 +106,7 @@ header nav p a:hover {
     width: 200px;
     margin: 0;
     padding: 11px;
-    font-size: 16px;
+    font-size: 18px;
     border: #E7E6E6 solid 1px;
 }
 
@@ -109,7 +114,7 @@ header nav p a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 16px;
+    font-size: 18px;
     width: 120px;
     background-color: #0065FC;
     color: white;
@@ -137,7 +142,7 @@ header nav p a:hover {
 }
 
 .filters h1 {
-    font-size: 20px;
+    font-size: 18px;
     font-family: Raleway-Bold, sans-serif;
 }
 
@@ -149,6 +154,11 @@ header nav p a:hover {
     height: 45px;
     border-radius: 50px;
     margin-left: 2%;
+    cursor: pointer;
+}
+
+.filters .filter:hover {
+    background-color: #DEEBFF;
 }
 
 .filters .filter div {
@@ -163,14 +173,9 @@ header nav p a:hover {
 }
 
 .filters .filter h2 {
-    font-size: 20px;
+    font-size: 17px;
     margin-right: 25px;
     font-family: Raleway-Bold, sans-serif;
-}
-
-.filters .filter h2:hover {
-    color: #0065FC;
-    cursor: pointer;
 }
 
 .filters .filter div i {
@@ -202,7 +207,7 @@ header nav p a:hover {
 }
 
 .informations h2 {
-    font-size: 18px;
+    font-size: 16px;
     margin-left: 10px;
 }
 
@@ -223,9 +228,14 @@ main {
 
 .accomodations h2 {
     margin: 0;
-    font-size: 18px;
+    font-size: 22px;
     font-family: Raleway-Bold, sans-serif;
-    padding: 30px;
+    padding: 20px;
+}
+
+.accomodations .clickable {
+    width: 115px;
+    font-size: 18px;
 }
 
 .accomodations .clickable:hover {
@@ -242,20 +252,26 @@ main {
     gap: 40px;
 }
 
-.accomodations .accomodations_container article {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 250px;
-    width: 25%;
+.accomodations .accomodations_container a {
+    height: 225px;
+    width: 26%;
     background-color: white;
     border-radius: 25px;
-    box-shadow: 5px 5px 5px #A9A9A9;
+    box-shadow: 5px 5px 5px #D7D7D7;
     cursor: pointer;
 }
 
-.accomodations .accomodations_container article img {
-    height: 60%;
+.accomodations .accomodations_container a article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.accomodations .accomodations_container a article img {
+    height: 50%;
+    min-height: 50%;
     width: 95%;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
@@ -263,74 +279,97 @@ main {
     object-fit: cover;
 }
 
-.accomodations .accomodations_container article div {
+.accomodations .accomodations_container a article div {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    height: 40%;
-    width: 80%;
-    margin-top: 5px;
+    justify-content: space-between;
+    height: 50%;
+    min-height: 50%;
+    width: 90%;
 }
 
-.accomodations .accomodations_container article div .stars {
+.accomodations .accomodations_container a article div .title {
+    width: 95%;
+    height: 50%;
+    min-height: 0;
+    margin-top: 10px;
+}
+
+.accomodations .accomodations_container a article div .stars {
     flex-direction: row;
     justify-content: left;
     height: auto;
+    min-height: 0;
 }
 
-.accomodations .accomodations_container article div h2, h3 {
+
+.accomodations .accomodations_container a article div .title h2 {
     font-size: 16px;
     padding: 0;
     margin: 0;
+    font-weight: 700;
+}
+
+.accomodations .accomodations_container a article div .title h3 {
+    font-size: 14px;
+    font-weight: 400;
+    padding: 0;
+    margin-top: 5px;
 }
 
 .populars {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
     background-color: #F2F2F2;
     border-radius: 30px;
     margin: 30px 1.5% 0 1.5%;
     width: 30%;
-    gap: 40px;
 }
 
-.populars h2 {
+.populars .populars_title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 20px;
+    width: 90%;
     margin: 0;
     font-size: 18px;
-    font-family: Raleway-Bold, sans-serif;
+    font-weight: 700;
+    padding-top: 20px;
 }
 
-.populars h2 {
-    font-size: 16px;
+.populars .populars_title h2 {
+    font-size: 22px;
 }
 
 .populars .populars_container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 40px;
+    gap: 25px;
 }
 
-.populars .populars_container article {
-    display: flex;
-    align-items: center;
+.populars .populars_container a {
     height: 150px;
     width: 85%;
     background-color: white;
-    box-shadow: 5px 5px 5px #A9A9A9;
+    box-shadow: 5px 5px 5px #D7D7D7;
     border-radius: 30px;
     cursor: pointer;
 }
 
-.populars .populars_container article h3 {
-    font-size: 15px;
+.populars .populars_container a article {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
 }
 
-.populars .populars_container article img {
+.populars .populars_container a article img {
     height: 140px;
-    width: 35%;
+    width: 40%;
     min-width: 35%;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
@@ -338,70 +377,88 @@ main {
     object-fit: cover;
 }
 
-.populars .populars_container article div {
+.populars .populars_container a article div {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: column;
-    height: 90%;
-    width: 65%;
-    margin-left: 10px;
+    height: 100%;
+    width: 60%;
+    margin-left: 5px;
 }
 
-.populars .populars_container article div .text {
-    display: flex;
-    flex-direction: column;
+.populars .populars_container a article div .title {
+    justify-content: normal;
+    height: auto;
+    width: 95%;
+    margin-top: 10px;
 }
 
-.populars .populars_container article div .stars {
-    display: flex;
+.populars .populars_container a article .title h2 {
+    font-size: 16px;
+    font-weight: 700;
+    padding: 0;
+    margin: 0;
+}
+
+.populars .populars_container a article .title h3 {
+    font-size: 15px;
+    font-weight: 400;
+    padding: 0;
+    margin: 10px 0 0 0;
+}
+
+.populars .populars_container a article div .stars {
     flex-direction: row;
     justify-content: left;
-    height: auto;
+    height: 25px;
 }
 
 .activities {
     display: flex;
     flex-direction: column;
-    margin-left: 1.5%;
     margin-top: 40px;
     margin-bottom: 40px;
+    width: 100%;
+}
+
+.activities h2 {
+    margin-left: 1.5%;
+    font-size: 18px;
+    font-family: Raleway-Bold, sans-serif;
 }
 
 .activities .activities_container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    width: 100%;
     height: 600px;
-    gap: 30px
+    gap: 30px;
 }
 
-.activities h2 {
-    margin: 0;
-    font-size: 18px;
-    font-family: Raleway-Bold, sans-serif;
+.activities .activities_container a {
+    width: 20%;
 }
 
-.activities article {
+.activities .activities_container a article {
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 15px;
-    box-shadow: 5px 5px 5px #A9A9A9;
+    box-shadow: 5px 5px 5px #D7D7D7;
     cursor: pointer;
 }
 
-.activities article h2 {
-    font-size: 15px;
+.activities .activities_container a article h2 {
+    font-size: 14px;
     font-family: Raleway, sans-serif;
-    padding: 10px;
 }
 
-.activities article img {
+.activities .activities_container a article img {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    width: 280px;
+    width: 100%;
     object-fit: cover;
 }
 
@@ -447,7 +504,7 @@ footer section {
     background-color: #F2F2F2;
 }
 
-@media screen and (min-width: 770px) and (max-width: 1245px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
     .filters {
         height: auto;
         flex-wrap: wrap;
@@ -472,7 +529,7 @@ footer section {
         width: 100%;
     }
 
-    .accomodations .accomodations_container article {
+    .accomodations .accomodations_container a {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -480,19 +537,23 @@ footer section {
         width: 45%;
     }
 
-    .accomodations .accomodations_container article img {
+    .accomodations .accomodations_container a article {
+        height: 100%;
+        width: 100%;
+    }
+
+    .accomodations .accomodations_container a article img {
         height: 60%;
         width: 97%;
     }
 
-    .accomodations .accomodations_container article div {
+    .accomodations .accomodations_container a article div {
         height: 40%;
         font-size: 15px;
     }
 
     .populars {
         margin: 40px 0 0 0;
-        order: -1;
         height: 240px;
         width: 100%;
         gap: 20px;
@@ -505,8 +566,12 @@ footer section {
         gap: 0;
     }
 
-    .populars .populars_container article {
+    .populars .populars_container a {
         width: 30%;
+    }
+
+    .populars .populars_container a article {
+        width: 100%;
     }
 
     .activities {
@@ -514,7 +579,7 @@ footer section {
         width: 100%;
     }
 
-    .activities h1 {
+    .activities h2 {
         margin: 0 0 20px 2%;
     }
 
@@ -528,22 +593,27 @@ footer section {
         gap: 30px;
     }
 
-    .activities article {
+    .activities .activities_container a {
         height: 200px;
         width: 45%;
     }
 
-    .activities article h1 {
-        margin: 0;
+    .activities .activities_container a article {
+        height: 100%;
+        width: 100%;
     }
 
-    .activities article img {
+    .activities .activities_container a article h2 {
+        margin: auto;
+    }
+
+    .activities .activities_container a article img {
         height: 80%;
         width: 100%;
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 768px) {
     header {
         height: 150px;
         flex-direction: column;
@@ -551,7 +621,7 @@ footer section {
 
     header img {
         margin: auto;
-        width: 180px;
+        height: 30px;
     }
 
     header nav {
@@ -573,13 +643,12 @@ footer section {
         color: #0065FC;
     }
 
-
     header nav p a {
         display: flex;
         justify-content: center;
         align-items: center;
         border-top: none;
-        padding: 0;
+        padding: 5px;
         width: 100%;
         height: 100%;
     }
@@ -643,19 +712,23 @@ footer section {
         width: 100%;
     }
 
-    .accomodations .accomodations_container article {
+    .accomodations .accomodations_container a {
         flex-direction: column;
-        align-items: center;
         height: 250px;
         width: 95%;
     }
 
-    .accomodations .accomodations_container article img {
+    .accomodations .accomodations_container a article {
+        height: 100%;
+        width: 100%;
+    }
+
+    .accomodations .accomodations_container a article img {
         height: 60%;
         width: 97%;
     }
 
-    .accomodations .accomodations_container article div {
+    .accomodations .accomodations_container a article div {
         height: 40%;
     }
 
@@ -675,8 +748,12 @@ footer section {
         gap: 20px;
     }
 
-    .populars .populars_container article {
+    .populars .populars_container a {
         width: 95%;
+    }
+
+    .populars .populars_container a article {
+        width: 100%;
     }
 
     .activities {
@@ -684,27 +761,33 @@ footer section {
         width: 100%;
     }
 
-    .activities h1 {
+    .activities h2 {
         margin: 0 0 20px 2%;
     }
 
     .activities .activities_container {
-        flex-direction: column;
         height: auto;
     }
 
-    .activities article {
+    .activities .activities_container a {
         height: 200px;
         width: 90%;
     }
 
-    .activities article h1 {
-        margin: 0;
+    .activities .activities_container a article {
+        display: flex;
+        height: 100%;
+        width: 100%;
+
     }
 
-    .activities article img {
+    .activities .activities_container a article img {
         height: 80%;
         width: 100%;
+    }
+
+    .activities .activities_container a article h2 {
+        margin: auto;
     }
 
     footer {
