--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     padding: 0;
     margin: auto;
     font-family: Raleway-Regular, sans-serif;
+    overflow-x: hidden;
 }
 
 ul {
@@ -312,6 +313,8 @@ main {
     padding: 0;
     margin: 0;
     font-weight: 700;
+
+    font-family: Raleway-Bold, sans-serif;
 }
 
 .accomodations .accomodations_container a article div .title h3 {
@@ -346,6 +349,7 @@ main {
 
 .populars .populars_title h2 {
     font-size: 22px;
+    font-family: Raleway-Bold, sans-serif;
 }
 
 .populars .populars_container {
@@ -399,9 +403,10 @@ main {
 
 .populars .populars_container a article .title h2 {
     font-size: 16px;
-    font-weight: 700;
     padding: 0;
     margin: 0;
+    font-weight: 700;
+    font-family: Raleway-Bold, sans-serif;
 }
 
 .populars .populars_container a article .title h3 {
